2006-10-27  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	don't send a return value if executing the procedure closed the
	plug-in (as is the case with gimp-quit). Fixes bug #332608.

2006-10-27  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am: reverted changes from 2006-04-06
	and build screenshot plug-in optionally again. Fixes bug #364852.

	* plug-ins/common/mkgen.pl: reverted addition of 'extralibs'
	parameter that was introduced for the screenshot plug-in only.

2006-10-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region):
	prefix parameters x1, y1, x2, y2 with "dest_".

	* app/core/gimpdrawable-combine.c
	(gimp_drawable_real_replace_region): cosmetic.

2006-10-27  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-vectors.c: wrap
	gimp_vectors_stroke_new_from_points in the form of a
	VectorsBezierStroke constructor.

	* plug-ins/pygimp/gimpmodule.c: wrap gimp_vectors_new_from_file
	and gimp_vectors_new_from_string.

	* plug-ins/pygimp/pygimp-pdb.c: PDB_VECTORS should be translated
	into Vectors objects.

2006-10-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/script-fu-compat.init: Return empty
	string if sep is at end of string in strbreakup.

2006-10-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/script-fu-compat.init: Added strbreakup,
	strcat, strcmp, string-trim, string-trim-left, string-trim-right, and 
	unstrbreakup.

2006-10-26  Jakub Steiner <jimmac@ximian.com>

	* stock-display-filter-proof:
	* stock-controller-keyboard:
	* stock-controller-linux-input: ruin more of Michael's artwork

2006-10-26  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/paths.pdb: use canonical procedure names.

	* app/pdb/paths_cmds.c: regenerated.

2006-10-26  Simon Budig  <simon@gimp.org>
